IMPALA-10973: Do not schedule empty scan nodes to coordinator

Until now fragments with scan nodes that have no scan ranges were
scheduled to the coordinator, even if it is an exclusive coordinator.

This could possibly lead to a lot of work to be scheduled to the
coordinator. This patch changes the logic to choose a random executor
instead.

Change-Id: Ie31df3861aad2e3e91cab621ff122a4f721905ef
Reviewed-on: http://gerrit.cloudera.org:8080/17954
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Reviewed-by: Abhishek Rawat <arawat@cloudera.com>
Reviewed-by: Bikramjeet Vig <bikramjeet.vig@cloudera.com>